# axum-webserver

./: Cargo.toml  README.md
src/lib/: routes.rs
src/lib/routes/: data.rs  hello.rs
src/lib/routes/data/: data.rs
src/lib/routes/hello/: hello.rs
