[package]
name = "axumwebserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "axumwebserver"
path = "src/lib/lib.rs"

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
axum = "0.5.6"
